# conway

./: .gitignore  API.rst  README.rst  micc3.cfg  pyproject.toml
conway/: __init__.py
docs/: Makefile  conf.py  hyperlinks.rst  index.rst  installation.rst  requirements.txt
tests/: __init__.py
tests/conway/: conway.test.pickle  test_conway.py
