[tool.poetry]
name = "conway"
version = "0.3.1"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Bert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/conway"
homepage = "https://github.com/etijskens/conway"

keywords = []

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
